<resources>
    <string name="app_name">Instagram_clone</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="title_addpost">AddPost</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logintext">Sign up to see photo and videos \n from your friends</string>
    <string name="loginpolicy">By signing up, you agree to out Terms, \n Data Policy and Cookies Policy.</string>
    <string name="settinguser">스토리 및 게시물 공유, 로그인 등 Instagram, Facebook, Messenger 간 연결된 환경에 대한 설정을 관리하세요</string>
    <string name="sign_up">Sign up</string>

</resources>