<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/nav_add_post"
        android:icon="@drawable/instagram"
        android:title="@string/title_addpost" />

    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/heart"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/user"
        android:title="@string/title_profile" />

</menu>